srvc-user-timeline/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyx-user-timeline
  namespace: tinyx
  labels:
    app: tinyx-user-timeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyx-user-timeline
  template:
    metadata:
      labels:
        app: tinyx-user-timeline
    spec:
      containers:
        - name: tinyx-user-timeline
          image: registry.cri.epita.fr/charles.simon-meunier/tinyx/tinyx-user-timeline:latest
          ports:
            - name: http
              containerPort: 9003
          volumeMounts:
            - mountPath: /config/
              name: application-properties
      imagePullSecrets:
        - name: tinyx-pull-secret
      volumes:
        - name: application-properties
          configMap:
            name: tinyx-user-timeline-application-properties
